fixed close on small window and some bugs

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -222,9 +222,10 @@ a
             background: white
             z-index: 1
             border-radius: 16px
-            img 
+            a.close1 
                 position: absolute
-                margin: 16px 0 0 496px
+                right: 24px
+                top: 16px
             .popup-container
                 margin-top: 32px
                 margin-left: 42px
@@ -287,10 +288,6 @@ a
                                 font-size: 14px
                                 a
                                     color: #397DFF
-
-
-
-                            
                     button
                         margin-top: 16px
                         width: 454px
@@ -302,25 +299,45 @@ a
                         font-weight: 600
                         color: white
         section.popup2 
-            display: flex
             z-index: 2
-            .popup-container
-                margin: 0
+            width: 538px
+            height: 407px
+            position: absolute
+            .popup2-container
+                display: flex
+                flex-direction: column
+                align-items: center
+                position: relative
                 width: 100%
-                img 
+                height: 100%
+                a.close2
+                    position: absolute
+                    top: 16px
+                    right: 24px
+                img.check
                     margin-top: 34px
-                    margin-left: 189px
+                    width: 160px
+                    height: 160px
+                    z-index: 2
                 p
-                    margin-top: 218px
+                    margin-top: 24px
                     &:nth-of-type(1)
                         font-size: 18px
                         line-height: 162%
                         font-weight: 500
                         text-align: center
                 form 
-                    margin-left: 42px
                     button
-                        margin-top: 8px
+                        width: 454px
+                        height: 52px
+                        background: #397DFF
+                        border-radius: 8px
+                        border: none
+                        font-size: 18px
+                        font-weight: 600
+                        color: white
+                        margin-top: 32px
+                        margin-bottom: 48px
 section.separator 
     width: 1920px
     height: 82px
@@ -387,7 +404,8 @@ section.sound
                     position: relative
                     width: 100%
                     height: 100%
-                    img.close_icon2
+                    a.close_icon2
+                        z-index: 1
                         position: absolute
                         top: 12px
                         right: 16px
